2006-01-11  Matthias Clasen  <mclasen@redhat.com>

	* tests/asyncqueue-test.c: Set error to NULL.

2006-01-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/gtree.c: Break some long lines.

	* tests/tree-test.c: Add more tests.

	* glib/gslice.c: Include config.h first, pointed out
	by Bogdan Nicula.

2005-12-20  Sven Herzberg  <herzi@gnome-de.org>

	* docs/reference/gobject/tmpl/gtype.sgml: explain that
	G_TYPE_INSTANCE_GET_CLASS() does behave different during
	initialization

2006-01-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/gslice.c: Only define _XOPEN_SOURCE if we know
	that we have posix_memalign().  (#323937, Bogdan Nicula)

2006-01-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.9.2 ===

2006-01-05  Hans Breuer  <hans@breuer.org>

	* glib/makefile.msc.in : added gslice.obj

2006-01-05  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

	* glib/gmain.c: Clarify the documentation of source ids
	a bit.  (#325874, Dan Williams)

	* configure.in: Fix another strict aliasing problem.

	* glib/gthreadpool.c: Avoid use of varargs macro.  (#325864,
	Kazuki IWAMOTO)

2006-01-04  Manish Singh  <yosh@gimp.org>

	* glib/glib.symbols
	* glib/gstdio.h: don't macroized g_access, g_chdir, and g_unlink
	either, since they have the same issue as g_rmdir. (Related to
	bug #325249)

Wed Jan  4 13:33:25 2006  Tim Janik  <timj@gtk.org>

	* glib/gslice.c (magazine_cache_pop_magazine): don't reverse chunk 
	order when creating magazines, so we hand out chunks with ascending
	adresses.

2006-01-04  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "ml" "zh_HK" to ALL_LINGUAS.

2006-01-03  Martyn Russell  <martyn@imendio.com>

	* docs/reference/glib/glib-sections.txt:
	* glib/glib.symbols:
	* glib/gthreadpool.[ch]:
	- Added new API g_thread_pool_get_idle_time() and
	g_thread_pool_set_idle_time(). (#324228).
	
	* tests/threadpool-test.c: 
	- Updated test case to do thread pool sorting, thread pool with